2011-10-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: Add LeSync synchronization backend and logic to read
	and save against it.  Group subscriptions, read marks, other marks,
	subscription levels, topic names, and topic offsets (the group's
	position within the topic) are saved.  This is an experimental backend
	and may change significantly.

2011-10-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-completion-function): Make sure
	message-tab-body-function is not attempted if one of
	message-completion-alist fails to find a completion (bug#9158).

2011-10-26  Daiki Ueno  <ueno@unixuser.org>

	* mml.el (mml-quote-region): Quote <#secure> tag.
	(mml-generate-mime-1): Unquote <#secure> tag.

2011-10-20  Chong Yidong  <cyd@gnu.org>

	* gnus-cite.el (gnus-message-citation-mode): Doc fix (in Emacs 24,
	calling a minor mode from Lisp with nil arg enables it, so we have to
	make the wording a bit ambiguous here).

2011-10-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-p): Macro for XEmacs compatibility.
	* nnir.el (nnir-mode): Use it.
	* nnmairix.el (nnmairix-determine-original-group-from-registry):
	Use it.

	* nnir.el (gnus-registry-enabled): Defvar to keep the compiler happy.
	* nnmairix.el (gnus-registry-enabled): Ditto.

2011-10-17  Dave Abrahams  <dave@boostpro.com>  (tiny change)

	* gnus-registry.el (gnus-registry-enabled): Add new variable. (Bug#9691)
	(gnus-registry-install-shortcuts): Set `gnus-registry-install' to 'ask
	only while we need to find out if it should be t or nil.
	(gnus-registry-initialize): Don't set `gnus-registry-install' to t.
	(gnus-registry-install-hooks): Set `gnus-registry-enabled' to t when
	the registry is installed.  Set it to nil when it's unloaded.
	(gnus-registry-install-p): Provide user guidance for the initial value
	of `gnus-registry-install' when it's 'ask, otherwise return its value.
	* nnregistry.el (nnregistry-open-server, nnregistry-server-opened):